Name:                gccxml
Version:             0.1.0.0
Synopsis:            Parser for gccxml output
Description:
  Library for parsing output of gccxml

Cabal-Version:       >=1.8
License:             BSD3 
License-File:        LICENSE
Homepage:            https://bitbucket.org/Shimuuar/gccxml
Author:              Aleksey Khudyakov 
Maintainer:          Alexey Khudyakov <alexey.skladnoy@gmail.com>
Category:            Language
build-type:          Simple

Library
  exposed-modules:
    Language.Cpp.GccXml
    Language.Cpp.GccXml.XML
    Language.Cpp.GccXml.Types
    Foreign.Cpp.Call
  build-depends:
    base >=3 && <5,
    transformers >= 0.2.2,
    text,
    xml-types   == 0.3.*,
    xml-conduit == 0.7.*,
    conduit     == 0.4.*,
    system-filepath,
    containers,
    void
  Ghc-options: -Wall
